@@ -1,13 +1,14 @@
 package ru.yandex.practicum.filmorate.validation;
 
 import lombok.extern.slf4j.Slf4j;
-import lombok.Data;
 import ru.yandex.practicum.filmorate.dto.FilmRequest;
 import ru.yandex.practicum.filmorate.exception.NotFoundException;
 import ru.yandex.practicum.filmorate.exception.ValidationException;
+import ru.yandex.practicum.filmorate.model.Director;
 import ru.yandex.practicum.filmorate.model.Film;
 import ru.yandex.practicum.filmorate.model.Genre;
 import ru.yandex.practicum.filmorate.model.Mpa;
+import ru.yandex.practicum.filmorate.storage.DirectorStorage;
 import ru.yandex.practicum.filmorate.storage.GenreStorage;
 import ru.yandex.practicum.filmorate.storage.MpaStorage;
 
@@ -19,10 +20,12 @@ import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Slf4j
-@Data
 public final class FilmValidator {
 
-    public static FilmRequest validateFilmRequestNew(FilmRequest filmRequest, MpaStorage mpaStorage, GenreStorage genreStorage) {
+    private FilmValidator() {
+    }
+
+    public static FilmRequest validateFilmRequestNew(FilmRequest filmRequest, MpaStorage mpaStorage, GenreStorage genreStorage, DirectorStorage directorStorage) {
         if (hasNoName(filmRequest)) {
             throw new ValidationException("Название фильма не заполнено");
         }
@@ -56,10 +59,19 @@ public final class FilmValidator {
             filmRequest.setGenres(validateGenre(filmRequest.getGenres(), genreStorage));
         }
 
+        if (hasNoDirector(filmRequest)) {
+            log.warn("Для фильма {} не указан ни один режиссёр", filmRequest.getName());
+            filmRequest.setDirectors(new ArrayList<>());
+        } else {
+            filmRequest.setDirectors(validateDirectors(filmRequest.getDirectors(), directorStorage));
+        }
+
+
         return filmRequest;
     }
 
-    public static FilmRequest validateFilmRequestForUpdate(Film film, FilmRequest filmRequest, MpaStorage mpaStorage, GenreStorage genreStorage) {
+    public static FilmRequest validateFilmRequestForUpdate(Film film, FilmRequest filmRequest, MpaStorage mpaStorage, GenreStorage genreStorage, DirectorStorage directorStorage) {
+
         if (hasNoName(filmRequest)) {
             filmRequest.setName(film.getName());
         }
@@ -88,23 +100,42 @@ public final class FilmValidator {
             validateMpa(filmRequest.getMpa().getId(), mpaStorage);
         }
 
-        if (hasNoGenre(filmRequest)) {
+        if (filmRequest.getGenres() != null) {
+            if (filmRequest.getGenres().isEmpty()) {
+                filmRequest.setGenres(new ArrayList<>());
+            } else {
+                filmRequest.setGenres(validateGenre(filmRequest.getGenres(), genreStorage));
+            }
+        } else {
             List<Genre> genres = film.getGenres().stream()
                     .map(genreStorage::findGenreById)
                     .filter(Optional::isPresent)
                     .map(Optional::get)
-                    .toList();
+                    .collect(Collectors.toList());
             filmRequest.setGenres(genres);
+        }
+
+        if (filmRequest.getDirectors() != null) {
+            if (filmRequest.getDirectors().isEmpty()) {
+                filmRequest.setDirectors(new ArrayList<>());
+            } else {
+                filmRequest.setDirectors(validateDirectors(filmRequest.getDirectors(), directorStorage));
+            }
         } else {
-            validateGenre(filmRequest.getGenres(), genreStorage);
+            // Здесь, получается, другая логика, отличная от жанров.
+            // Если в реквесте на апдейт в поле режиссёра приходит null, то это значит удаление всех режиссёров из фильма
+            // Поэтому ставим пустой список режиссёров
+            filmRequest.setDirectors(new ArrayList<>());
+//            List<Director> directors = film.getDirectors().stream()
+//                    .map(directorStorage::findDirectorById)
+//                    .filter(Optional::isPresent)
+//                    .map(Optional::get)
+//                    .collect(Collectors.toList());
+//            filmRequest.setDirectors(directors);
         }
 
         return filmRequest;
     }
-
-    /**
-     * Проверка наличия параметров в реквесте
-     */
 
     public static boolean hasNoName(FilmRequest request) {
         return request.getName() == null || request.getName().isBlank();
@@ -130,9 +161,9 @@ public final class FilmValidator {
         return !Objects.nonNull(request.getGenres()) || request.getGenres().isEmpty();
     }
 
-    /**
-     * Валидация параметров фильма
-     */
+    public static boolean hasNoDirector(FilmRequest request) {
+        return request.getDirectors() == null || request.getDirectors().isEmpty();
+    }
 
     public static void validateDescription(String description) {
         if (description.length() >= 200) {
@@ -158,12 +189,48 @@ public final class FilmValidator {
     }
 
     public static List<Genre> validateGenre(List<Genre> genres, GenreStorage genreStorage) {
+        if (genres == null) {
+            return new ArrayList<>();
+        }
         return genres.stream()
+                .filter(Objects::nonNull)
                 .map(Genre::getId)
-                .distinct() // убираем дубликаты
+                .distinct()
                 .map(genreId -> genreStorage.findGenreById(genreId)
                         .orElseThrow(() -> new NotFoundException(String.format("Жанр с id = %d не найден в справочнике", genreId))))
                 .collect(Collectors.toList());
     }
 
+    public static List<Director> validateDirectors(List<Director> directors, DirectorStorage directorStorage) {
+        if (directors == null) {
+            return new ArrayList<>();
+        }
+        return directors.stream()
+                .filter(Objects::nonNull)
+                .map(Director::getId)
+                .distinct()
+                .map(directorId -> directorStorage.findDirectorById(directorId)
+                        .orElseThrow(() -> new NotFoundException(String.format("Режиссёр с id = %d не найден в справочнике", directorId))))
+                .collect(Collectors.toList());
+    }
+
+    public static void validateGenreIdForFilter(Integer genreId, GenreStorage genreStorage) {
+        log.debug("Валидация genreId для фильтрации: {}", genreId);
+        if (genreId != null) {
+            genreStorage.findGenreById(genreId)
+                    .orElseThrow(() -> new NotFoundException(String.format("Жанр с id = %d не найден в справочнике для фильтрации", genreId)));
+        }
+        log.debug("Валидация genreId для фильтрации пройдена.");
+    }
+
+    public static void validateYearForFilter(Integer year) {
+        log.debug("Валидация года для фильтрации: {}", year);
+        if (year != null) {
+            int currentYear = LocalDate.now().getYear();
+            if (year < 1895 || year > currentYear) {
+                throw new ValidationException(String.format("Год выпуска фильма для фильтрации должен быть между 1895 и %d", currentYear));
+            }
+        }
+        log.debug("Валидация года для фильтрации пройдена.");
+    }
 }
